TNTBot-cilium-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cnp-deny-malware-tntbotinger-communication"
  namespace: tntbot # Change your namespace
spec:
  description: "Policy to deny tntbotinger communication over port 6697, 51982 and 1982"
  endpointSelector:
    matchLabels:
      app: frontend  # Change your matchLabels
  egressDeny:
  - toPorts:
    - ports:
      - port: "6697"
        protocol: TCP
  ingressDeny:
  - toPorts:
    - ports:
      - port: "51982"
        protocol: TCP
      - port: "1982"
        protocol: TCP
